求知提问接口添加参数

--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-newQ.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-newQ.html
@@ -267,6 +267,7 @@
 					askMan: personalUTID, //提问人
 					isAnonym: 0, //是否匿名
 					encAddr: TAs.encAddr,
+					encType:TAs.encType,
 					thumbnail: TAs.encImg,
 					cutImg: "",
 					inviteExperts: boxesStr //邀请专家,例如[1,2,3]
