--- a/JiaoBaoYun-hb/html/show/show_home_1.html
+++ b/JiaoBaoYun-hb/html/show/show_home_1.html
@@ -229,7 +229,6 @@
 						zonepArray[id].Comments[commentId].Replys.push(tempData.Reply);
 
 					} else {
-
 						console.log(JSON.stringify(data.detail))
 						personalUTID = myStorage.getItem(storageKeyName.PERSONALINFO).utid;
 						pageIndex = 1;
@@ -238,7 +237,21 @@
 							requestData(id, 1);
 						} else { //关注的人数据
 							//81.（用户空间）获取用户所有关注的用户
-							getFocusByUser();
+							if(personalUTID == 0) {
+								var showfocusperson = window.myStorage.getItem(window.storageKeyName.SHOWFOCUSEPERSEN);
+								var tempModel = cities[cities.length - 1];
+								userIDs = showfocusperson;
+								var tempArr = [];
+								tempModel.userIDs = userIDs?userIDs:tempArr;
+								tempModel.index = 1;
+								tempModel.isRefresh = 0; //是刷新0，还是加载更多1
+								//74.(用户空间）获取多用户空间所有用户动态列表
+								console.log(JSON.stringify(tempModel))
+								getAllUserSpacesByUser(tempModel);
+							} else {
+								getFocusByUser();
+							}
+
 						}
 					}
 
@@ -302,9 +315,22 @@
 							if(info.aflag == 0) { //定制的城市
 								requestData(info.acode, 1);
 							} else { //关注的人数据
-								//81.（用户空间）获取用户所有关注的用户
+							//81.（用户空间）获取用户所有关注的用户
+							if(personalUTID == 0) {
+								var showfocusperson = window.myStorage.getItem(window.storageKeyName.SHOWFOCUSEPERSEN);
+								var tempModel = cities[cities.length - 1];
+								userIDs = showfocusperson;
+								tempModel.userIDs = userIDs;
+								tempModel.index = 1;
+								tempModel.isRefresh = 0; //是刷新0，还是加载更多1
+								//74.(用户空间）获取多用户空间所有用户动态列表
+								console.log(JSON.stringify(tempModel))
+								getAllUserSpacesByUser(tempModel);
+							} else {
 								getFocusByUser();
 							}
+
+						}
 						} else {
 							console.log(JSON.stringify(datasource))
 							zonepArray = datasource[sliderId];
@@ -405,9 +431,22 @@
 									if(info.aflag == 0) { //定制的城市
 										requestData(info.acode, 1);
 									} else { //关注的人数据
-										//81.（用户空间）获取用户所有关注的用户
-										getFocusByUser();
-									}
+							//81.（用户空间）获取用户所有关注的用户
+							if(personalUTID == 0) {
+								var showfocusperson = window.myStorage.getItem(window.storageKeyName.SHOWFOCUSEPERSEN);
+								var tempModel = cities[cities.length - 1];
+								userIDs = showfocusperson;
+								tempModel.userIDs = userIDs;
+								tempModel.index = 1;
+								tempModel.isRefresh = 0; //是刷新0，还是加载更多1
+								//74.(用户空间）获取多用户空间所有用户动态列表
+								console.log(JSON.stringify(tempModel))
+								getAllUserSpacesByUser(tempModel);
+							} else {
+								getFocusByUser();
+							}
+
+						}
 									//结束下拉刷新
 									self.endPullDownToRefresh();
 								}, 1000);
@@ -583,7 +622,11 @@
 								aname: uarea.aname,
 								aflag: 0 //0为根据省市编码获取数据，1为获取关注的人的列表
 							});
-							//加入关注的人数据
+							
+						} else {
+
+						}
+						//加入关注的人数据
 							eduArray.push({
 								acode: 1,
 								aname: '我关注的人',
@@ -591,10 +634,7 @@
 								index: 1, //请求第几页数据
 								isRefresh: 0 //是刷新0，还是加载更多1
 							});
-						}else{
-							
-						}
-												//游客身份
+						//游客身份
 						if(!parseInt(myStorage.getItem(storageKeyName.PERSONALINFO).utid)) {
 							var localCity = window.myStorage.getItem(window.storageKeyName.SHOWCITY);
 							if(localCity && localCity.length != 0) {
@@ -602,7 +642,6 @@
 								eduArray = eduArray.concat(localCity)
 							}
 						}
-
 
 						//						mui.toast(data.RspTxt);
 					}
