--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-answerDetailSub.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-answerDetailSub.html
@@ -40,7 +40,11 @@
 				<!--问题控件-->
 				<div class="questionContent-container">
 					<div id="question-content" class="question-content"></div>
-					<div id="answer-imgs" class="answer-imgs"></div>
+					<div id="answer-imgs" class="answer-imgs">
+						<div style="background-image:url(http://qn-kfpb.jiaobaowang.net/qiuzhi/Knowledge/thumb/1493886361110.png?imageMogr2/gravity/Center/crop/!720x324);background-position:center;background-size:contain;width:330px;height:148.5px;text-align:center;">
+							<img style="margin:auto 0;" class="answer-video" retry="0" src="../../image/utils/playvideo.png"/>
+						</div>
+					</div>
 					<div class="">
 						<p id="answer-time" class="display-inlineBlock answer-time"><span id="answer-zanNo" class="zan-num">100</span>赞·5小时前</p>
 						<p id="support-answer" class="support-container display-inlineBlock mui-pull-right"><span id="answer-zan" class="mui-icon iconfont icon-support"></span> </p>
