--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-questionSub.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-questionSub.html
@@ -120,7 +120,7 @@
 				line-height: 40px;
 				font-size: 15px;
 				font-weight: bold;
-				color: gray;
+				color: #323232;
 			}
 
 			#answer_bottom .mui-table-view-cell .answer-info {
@@ -162,6 +162,7 @@
 				-webkit-line-clamp: 3;
 				-webkit-box-orient: vertical;
 				margin-top: 10px;
+				color: #808080;
 			}
 
 			#showAll {
