--- a/JiaoBaoYun-hb/html/cloud/record_student_add.html
+++ b/JiaoBaoYun-hb/html/cloud/record_student_add.html
@@ -124,10 +124,10 @@
 					MultiMediaId: 'MultiMedia', //存放多媒体对象控件的id
 					Key: personalUTID, //utid
 					Picture: true, //是否显示图片图标
-					Audio: true, //是否显示音频图标
+//					Audio: true, //是否显示音频图标
 					Video: true, //是否显示视频图标
 					TotalPicture: 9, //图片的个数
-					TotalAudio: 1, //音频的个数
+//					TotalAudio: 1, //音频的个数
 					TotalVideo: 1, //视频的个数
 				});
 
